--- a/MaPUSim/GUI/view/res/resources.qrc
+++ b/MaPUSim/GUI/view/res/resources.qrc
@@ -1,11 +1,10 @@
 <!DOCTYPE RCC>  
 <RCC version="1.0">  
 <qresource>   
-<file alias="new.png">image/new.png</file>
-<file alias="open.png">image/open.png</file>  
-<file alias="save.png">image/save.png</file>  
-<file alias="cut.png">image/cut.png</file> 
-<file alias="copy.png">image/copy.png</file> 
-<file alias="paste.png">image/paste.png</file>  
+<file alias="open.png">image/open.png</file>
+<file alias="armred.png">image/armred.png</file>  
+<file alias="armgreen.png">image/armgreen.png</file>  
+<file alias="apcred.png">image/apcred.png</file>  
+<file alias="apcgreen.png">image/apcgreen.png</file>    
 </qresource>  
 </RCC>
