--- a/MaPUSim/GUI/view/res/resources.qrc
+++ b/MaPUSim/GUI/view/res/resources.qrc
@@ -5,6 +5,7 @@
 <file alias="armred.png">image/armred.png</file>  
 <file alias="armgreen.png">image/armgreen.png</file>  
 <file alias="apcred.png">image/apcred.png</file>  
-<file alias="apcgreen.png">image/apcgreen.png</file>    
+<file alias="apcgreen.png">image/apcgreen.png</file>   
+<file alias="splash.jpg">image/splash.jpg</file>
 </qresource>  
 </RCC>
