--- a/asm-gui/view/res/resources.qrc
+++ b/asm-gui/view/res/resources.qrc
@@ -10,5 +10,6 @@
 <file alias="paste.png">images/paste.png</file>  
 <file alias="save.png">images/save.png</file>   
 <file alias="saveas.png">images/saveas.png</file>    
+<file alias="fill.png">images/fill.png</file>
 </qresource>  
 </RCC>
