--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,13 @@
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-
+    <!-- custom the MaPU logo -->
+    <style>
+      #logo {
+        float:left;
+        margin:0px 20px 0px 0px;
+      }
+    </style>
 {% seo %}
   </head>
 
@@ -18,7 +24,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>-->
-
+          <img src="assets/user_images/MaPU_logo.png" id="logo">
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
