--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,6 +15,7 @@
         margin:0px 20px 0px 0px;
       }
     </style>
+    <!-- custom the MaPU logo -->
 {% seo %}
   </head>
 
@@ -24,7 +25,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>-->
-          <img src="assets/user_images/MaPU_logo.png" id="logo">
+          <img src="/assets/user_images/MaPU_logo.png" id="logo">
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
